--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,15 +1,16 @@
 body {
-    font-family: 'Courier New', Courier, monospace;
-    text-align: center;
-    color: #2d2013;
-    text-align: center;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 3px;
-    padding-top: 3.2rem;
-
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
+  color: #2d2013;
+  text-align: center;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 3px;
+  padding-top: 3.2rem;
 }
 
-
+img {
+    width: 50%;
+}
